--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/LogoIcon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_KAKAO_KEY%&libraries=services"
       type="text/javascript"
     ></script>
-    <title>Vite + React + TS</title>
+    <title>Poppin 관리자 페이지</title>
   </head>
   <body>
     <div id="root"></div>
